--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "test": "jest",
-    "swagger-doc": "swagger-jsdoc -d swagger/definition.js src/modules/**/infra/http/controllers/*.ts src/shared/infra/http/routes/index.ts -o swagger/documentation.json"
+    "swagger-doc": "swagger-jsdoc -d swagger/definition.js src/modules/**/infra/http/controllers/*.ts src/shared/infra/http/routes/index.ts -o src/documentation.json"
   },
   "dependencies": {
     "@typescript-eslint/parser": "^4.13.0",
