--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "heroku-postbuild": "npm install && npm install --only-dev && npm run typeorm migration:run && npm run build",
+    "heroku-postbuild": "npm install && npm install --only-dev && ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run && babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
     "start": "node dist/shared/infra/http/server.js",
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
     "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
